# cyng

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_src_archive.sh  demo.db  src_filelist.txt  update_oecp.sh  update_oecp2.sh
.github/workflows/: docker-images.yml
3party/: duckdb.cmake  shell.cmake  sqlite.cmake
3party/libduckdb-src/: duckdb.hpp
cmake/: FindDate.cmake  FindMySQL.cmake  FindPugiXML.cmake  FindReadline.cmake  address_model.cmake  db_connectors.cmake  time_stamp.cmake
docs/: CMakeLists.txt  mainpage.md  test.docscript
include/: cyng.h.in  version.hpp.in
include/cyng/: meta.hpp  version.hpp
lib/async/: lib.cmake
lib/compatibility/: lib.cmake
lib/core/: lib.cmake
lib/crypto/: lib.cmake
lib/csv/: lib.cmake
lib/db/: lib.cmake
lib/docscript/: lib.cmake
lib/domain/: lib.cmake
lib/io/: lib.cmake
lib/json/: lib.cmake
lib/log/: lib.cmake
lib/meta/: lib.cmake
lib/parser/: lib.cmake
lib/rnd/: lib.cmake
lib/scm/: lib.cmake
lib/sql/: lib.cmake
lib/store/: lib.cmake
lib/sys/: lib.cmake
lib/table/: lib.cmake
lib/vm/: lib.cmake
lib/xml/: lib.cmake
share/: cyng.h.in
share/pkgconfig/: cyng.pc.in
src/asm/: CMakeLists.txt  lib.cmake
src/asm/src/: code.cpp  parser.cpp  position.cpp  reader.cpp  token.cpp  tokenizer.cpp  writer.cpp
src/assets/: LICENSE.txt
src/db/: CMakeLists.txt  connection_types.cpp  lib.cmake  session.cpp  storage.cpp
src/db/odbc/: odbc_connection.cpp  odbc_defs.h  odbc_result.cpp  odbc_statement.cpp  odbc_statement.h
src/db/sqlite3/: sqlite_connection.h  sqlite_result.cpp  sqlite_session.cpp  sqlite_statement.cpp  sqlite_statement.h
src/db/src/: connection_types.cpp  julian.cpp  session.cpp  session_pool.cpp  storage.cpp
src/db/src/duckdb/: duckdb_result.cpp  duckdb_result.h  duckdb_session.cpp  duckdb_session.h
src/db/src/odbc/: odbc_connection.h  odbc_defs.h  odbc_diag.hpp  odbc_error.cpp  odbc_error.hpp  odbc_exception.hpp  odbc_handle.hpp  odbc_result.h  odbc_session.cpp  odbc_session.h  odbc_statement.cpp  odbc_statement.h
src/db/src/sqlite3/: sqlite_connection.cpp  sqlite_connection.h  sqlite_defs.h  sqlite_error.cpp  sqlite_error.hpp  sqlite_result.cpp  sqlite_result.h  sqlite_session.cpp  sqlite_session.h  sqlite_statement.cpp  sqlite_statement.h
src/io/: CMakeLists.txt  io_buffer.cpp  lib.cmake  ostream.cpp  serialize.cpp
src/io/parser/: parser.cpp  utf-8.cpp
src/io/serializer/: binary.cpp  cpp.cpp  csv.cpp  json.cpp  json_walker.cpp  plain.cpp  pretty_walker.cpp  typed.cpp  xml.cpp
src/io/src/: iso_3166_1.cpp  iso_639_1.cpp  ostream.cpp  serialize.cpp
src/io/src/parser/: parser.cpp  stream.cpp  utf-8.cpp
src/io/src/serializer/: binary.cpp  cpp.cpp  csv.cpp  io.cpp  json.cpp  json_walker.cpp  plain.cpp  pretty_walker.cpp  typed.cpp  xml.cpp
src/log/: CMakeLists.txt  lib.cmake  log.cpp  logger.cpp  record.cpp
src/log/appender/: appender.cpp  console.cpp  event_log.cpp  rolling_file.cpp  sys_log.cpp
src/log/src/: conv.cpp  log.cpp  logger.cpp  record.cpp
src/log/src/appender/: appender.cpp  console.cpp  event_log.cpp  journald.cpp  rolling_file.cpp  sys_log.cpp
src/modules/: CPPFeatureSupport.cmake  FindCYNG.cmake  FindPugiXML.cmake  FindSQLite3.cmake  FindUnixODBC.cmake  GenerateDoxygenDoc.cmake  InitSubmodules.cmake  (+1 more)
src/net/: CMakeLists.txt  lib.cmake
src/net/src/: client.cpp  client_factory.cpp  client_proxy.cpp  http_client.cpp  http_client_factory.cpp  http_client_proxy.cpp  resolver.cpp  server.cpp  server_factory.cpp  server_proxy.cpp
src/parse/: CMakeLists.txt  buffer.cpp  color.cpp  duration.cpp  hex.cpp  lib.cmake  mac.cpp  net.cpp  op.cpp  raw.cpp  string.cpp  utf-8.cpp  version.cpp
src/parse/csv/: csv.cpp  csv_parser.cpp  csv_symbol.cpp  csv_tokenizer.cpp
src/parse/json/: json.cpp  json_parser.cpp  json_symbol.cpp  json_tokenizer.cpp
src/parse/src/: buffer.cpp  color.cpp  duration.cpp  hex.cpp  net.cpp  op.cpp  raw.cpp  string.cpp  timestamp.cpp
src/parse/src/csv/: csv.cpp  csv_parser.cpp  csv_symbol.cpp  csv_tokenizer.cpp
src/parse/src/json/: json.cpp  json_parser.cpp  json_tokenizer.cpp
src/rnd/: CMakeLists.txt  lib.cmake  rnd.cpp
src/rnd/src/: statistics.cpp
src/scm/: CMakeLists.txt  lib.cmake  win_registry.cpp
src/scm/src/: mgr.cpp  service.cpp
src/sql/: CMakeLists.txt  constant.cpp  dialect.cpp  lib.cmake  placeholder.cpp  sql.cpp  variable.cpp
src/sql/src/: constant.cpp  dialect.cpp  operators.cpp  placeholder.cpp  sql.cpp  variable.cpp
src/store/: CMakeLists.txt  auto_table.cpp  db.cpp  key.cpp  lib.cmake  meta.cpp  pub.cpp  record.cpp  slot.cpp  table.cpp
src/store/src/: auto_table.cpp  db.cpp  key.cpp  pub.cpp  record.cpp  slot.cpp  table.cpp
src/sys/: CMakeLists.txt  cpu.cpp  dns.cpp  host.cpp  info.cpp  lib.cmake  linux.cpp  locale.cpp  mac.cpp  memory.cpp  net.cpp  port.cpp  process.cpp
src/sys/src/: clock.cpp  cpu.cpp  dns.cpp  filesystem.cpp  host.cpp  info.cpp  linux.cpp  mac.cpp  ntp.cpp  port.cpp  windows.cpp
src/task/: CMakeLists.txt  channel.cpp  controller.cpp  lib.cmake  registry.cpp  scheduler.cpp  stash.cpp
src/task/src/: channel.cpp  controller.cpp  registry.cpp  scheduler.cpp  stash.cpp  task_factory.cpp
src/vm/: CMakeLists.txt  context.cpp  lib.cmake  library.cpp  linearize.cpp  memory.cpp  mesh.cpp  proxy.cpp  stack.cpp  vm.cpp
src/vm/src/: generator.cpp  memory.cpp  proxy.cpp  stack.cpp  vm.cpp
src/xml/: CMakeLists.txt  lib.cmake  node.cpp  xml.cpp
src/xml/src/: node.cpp  reader.cpp  xml.cpp
test/: demo.cmake  unit-test.cmake
tools/src/asm/: CMakeLists.txt  app.cmake
tools/src/asm/include/: code.h  parser.h  position.h  reader.h  tokenizer.h
tools/src/asm/src/: code.cpp  main.cpp  parser.cpp  position.cpp  reader.cpp  token.cpp  tokenizer.cpp
unit_test/: CMakeLists.txt
unit_test/assets/: if_inet6.txt  meminfo.txt
unit_test/src/: demo_task.cpp  demo_task.h  demo_task_ref.cpp  demo_task_ref.h  test_core.cpp  test_db.cpp  test_io.cpp  test_log.cpp  test_net.cpp  test_parse.cpp  test_sql.cpp  test_store.cpp  test_sys.cpp  test_task.cpp  test_vm.cpp
(+709 files in other folders)
